--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Judit</title>
+    <title>Raditya</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -645,7 +645,7 @@
 
                 <div class="column xl-6 lg-12">
                     <p class="ss-copyright">
-                        <span>© Copyright Judit 2023</span> 
+                        <span>© Copyright Raditya 2023</span> 
                         <span>Design by Группа 8</span>
                     </p>
                 </div>
